<resources>
    <string name="app_name">Donation Tracker</string>
    <string name="title_activity_location_view">LocationView</string>
    <string name="title_activity_location_map">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Zipcode">Zipcode</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="donationappimage">DonationAppImage</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="menu">menu</string>
    <string name="button">Button</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="reset">Reset</string>
    <string name="email_address">Email Address</string>
    <string name="map">Map</string>
    <string name="video1">Video1</string>
    <string name="detail">Detail</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="first_name">First Name</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="street_address">Street Address</string>
    <string name="address">Address</string>
    <string name="user_information">User Information</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="abc">abc</string>
    <string name="_12345">12345</string>
    <string name="city_">City:</string>
    <string name="zip_">Zip:</string>
    <string name="type_">Type:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="donation_list">Donation List</string>
    <string name="add">ADD</string>
    <string name="no_item_to_display">No item to display</string>
    <string name="menu_test">menu test</string>
    <string name="donation_tracker">Donation Tracker</string>
    <string name="log_out">Log out</string>
    <string name="history">History</string>
    <string name="location_list">Location List</string>
    <string name="search">Search</string>
    <string name="my_account">My Account</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="search_history">Search History</string>
    <string name="search_for">Search For…</string>
    <string name="state_">State:</string>
    <string name="http">http://</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment</string>
    <string name="value">Value</string>
    <string name="short_description_of_item">Short description of item</string>
    <string name="full_description_of_item">Full description of item</string>
    <string name="time">Time</string>
    <string name="location_of_donation_name">Location of Donation Name</string>
    <string name="donation_detail">Donation Detail</string>
    <string name="main">Main Page</string>


</resources>
