<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Controllers.Location.LocationSet"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            layout="@layout/navigation_actionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="503dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/locationBox"
                android:layout_width="219dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/locationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    tools:text="Location Name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cityBox"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toStartOf="@+id/zipcodeBox"
                app:layout_constraintStart_toStartOf="@+id/addressBox"
                app:layout_constraintTop_toBottomOf="@+id/addressBox">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cityInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:text="@string/city" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addressBox"
                android:layout_width="368dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@+id/locationType"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/locationBox"
                app:layout_constraintTop_toBottomOf="@+id/locationType">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/addressInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:text="@string/address" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneBox"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toStartOf="@+id/websiteBox"
                app:layout_constraintStart_toStartOf="@+id/cityBox"
                app:layout_constraintTop_toBottomOf="@+id/zipcodeBox">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:text="@string/phone" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/websiteBox"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="@+id/stateChoose"
                app:layout_constraintTop_toBottomOf="@+id/zipcodeBox">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/websiteInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/http"
                    android:text="@string/website" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/zipcodeBox"
                android:layout_width="116dp"
                android:layout_height="56dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/addressBox"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="134dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/zipcodeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Zipcode"
                    android:text="@string/Zipcode" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/locationType"
                android:layout_width="136dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/locationBox"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/stateChoose"
                android:layout_width="115dp"
                android:layout_height="56dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="@+id/addressBox"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/zipcodeBox"
                app:layout_constraintTop_toBottomOf="@+id/addressBox" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/websiteBox"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/phoneBox"
                app:layout_constraintTop_toBottomOf="@+id/websiteBox"
                app:layout_constraintVertical_bias="0.259" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id = "@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>